# openapv_tmv

./: CMakeLists.txt  README.md  aarch64_toolchain.cmake  arm64_toolchain.cmake  version.txt
.github/workflows/: build.yml  release_packages.yml
app/: CMakeLists.txt  oapv_app_args.h  oapv_app_dec.c  oapv_app_enc.c  oapv_app_util.h  oapv_app_y4m.h
inc/: oapv.h  oapv_config.h  oapv_config.h.in  oapv_libversion.h.in
pkgconfig/: oapv.pc.in
readme/: apv_family.md  apv_isobmff.md
src/: CMakeLists.txt  oapv.c  oapv_bs.c  oapv_bs.h  oapv_def.h  oapv_metadata.c  oapv_metadata.h  oapv_param.c  oapv_param.h  oapv_port.c  oapv_port.h  oapv_rc.c  oapv_tbl.c  oapv_tbl.h  oapv_tpool.c  oapv_tpool.h  oapv_tq.c  oapv_tq.h  oapv_util.c  oapv_util.h  oapv_vlc.c  oapv_vlc.h
src/avx/: oapv_tq_avx.c
src/neon/: oapv_sad_neon.c  oapv_tq_neon.c
test/: README.md
test/bitstream/: qp_D.apv
util/: apv.hexpat
